# RBE-3002-Repo

./: .gitignore  README.md
Lab2/: CMakeLists.txt  package.xml
Lab2/launch/: lab2.launch  robot.launch  simulation.launch
Lab2/src/: bezier.py  drive.py  lab2.py  marker_example.py
Lab3/: CMakeLists.txt  package.xml
Lab3/launch/: simulation.launch
Lab3/rviz/: rbe3002_lab3.rviz
Lab3/src/: drive.py  path_planner.py  priority_queue.py  test_planner.py
Lab4/: CMakeLists.txt  README.md  maps.pgm  maps.yaml  package.xml
Lab4/launch/: amcl.launch  amcl_sim.launch  final_maze.launch  maze_sim.launch  practice_exploration.launch  rob_test.launch  sample.launch  sim.launch  slam.launch
Lab4/maps/: demo.pgm  demo.yaml  demo_map_2.pgm  map.pgm  map2.pgm  map2.yaml  map3.pgm  map3.yaml  sim.yaml
Lab4/models/FinalMaze/: model.config
Lab4/models/FinalMaze_Easier/: model.sdf
Lab4/rviz/: amcl.rviz  rbe3002_lab4.rviz
Lab4/src/: amcl.py  amcl_redo.py  constants.py  drive.py  head.py  main.py  mapping.py  path_planner.py  phase2.py  utils.py
lab2/: CMakeLists.txt  package.xml
lab2/launch/: robot.launch  simulation.launch
lab2/src/: __init__.py  bezier_example.py  drive.py
lab3/: CMakeLists.txt  package.xml
lab3/launch/: simulation.launch
lab4/: CMakeLists.txt  README.md  maps.yaml  package.xml
lab4/launch/: amcl.launch  amcl_sim.launch  final_maze.launch  maze_sim.launch  rob_test.launch  sample.launch  sim.launch  slam.launch
lab4/maps/: demo_map_2.yaml  map1.pgm  map2.yaml  map3.pgm  sim.pgm
lab4/models/FinalMaze/: model.sdf
lab4/models/FinalMaze_Easier/: model.config
lab4/rviz/: amcl.rviz  rbe3002_lab4.rviz
lab4/src/: drive.py
lab4/worlds/: final_maze.world  final_maze_easier.world
