<?xml version="1.0"?>
<package format="2">
  <name>rbe3002_final</name>
  <version>0.0.0</version>
  <description>The RBE3002 final maze</description>

  <maintainer email="treiser@todo.todo">treiser</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>turtlebot3_description</build_depend>
  <build_export_depend>turtlebot3_description</build_export_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <build_depend>turtlebot3_bringup</build_depend>
  <build_export_depend>turtlebot3_bringup</build_export_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
